--- a/deployment/static/css/style.css
+++ b/deployment/static/css/style.css
@@ -218,10 +218,20 @@ ul li {
 }
 
 .logo {
-    width: 150px;
+    width: 200px;
     height: auto;
     display: block;
     margin: 0 auto 15px auto;
+}
+
+.logo img {
+    width: 80px; 
+    margin-bottom: 0px; 
+}
+
+h1 {
+    margin-top: 5px; 
+    font-size: 2.2rem;
 }
 
 .similar-artists {
